--- a/result.html
+++ b/result.html
@@ -35,20 +35,22 @@
 </head>
 <body>
   <h1>你的个性分析报告</h1>
-  <div class="result-box" id="result">
-    正在加载，请稍候...
-  </div>
+  <div class="result-box" id="result">正在加载，请稍候...</div>
 
   <script>
-    const query = new URLSearchParams(window.location.search);
-    const result = query.get("text");
-    const box = document.getElementById("result");
-
-    if (result) {
-      box.textContent = decodeURIComponent(result);
-    } else {
-      box.textContent = "未找到分析内容，请返回重新提交。";
-    }
+    fetch("/api/content.json")
+      .then(response => response.json())
+      .then(data => {
+        const box = document.getElementById("result");
+        if (data && data.content) {
+          box.textContent = data.content;
+        } else {
+          box.textContent = "未找到分析内容，请返回重新提交。";
+        }
+      })
+      .catch(error => {
+        document.getElementById("result").textContent = "加载失败：" + error;
+      });
   </script>
 </body>
 </html>
