--- a/loading.html
+++ b/loading.html
@@ -14,44 +14,73 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      margin: 0;
       text-align: center;
     }
     .loader {
       border: 6px solid #ccc;
       border-top: 6px solid #a78bfa;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       animation: spin 1s linear infinite;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
+    }
+    h2 {
+      font-size: 24px;
+      margin: 0;
+    }
+    p {
+      color: #ccc;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div class="loader"></div>
   <h2>正在分析中，请稍候...</h2>
-  <p>我们正在结合您的八字、人类图、星座和MBTI信息，生成您的个性分析报告</p>
+  <p>我们正在结合您的八字、人类图、星座和 MBTI 信息，生成您的个性分析报告</p>
 
   <script>
-    // 每隔2秒检查一次是否有结果返回（从 URL 参数中获取）
-    const checkStatus = async () => {
+    const query = new URLSearchParams(window.location.search);
+    const birth_date = query.get("birth_date");
+    const birth_time = query.get("birth_time");
+    const birth_city = query.get("birth_city");
+    const mbti = query.get("mbti");
+
+    const webhookUrl = "https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8";
+
+    async function fetchResult() {
       try {
-        const res = await fetch(window.location.href);
+        const res = await fetch(webhookUrl, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            birth_date,
+            birth_time,
+            birth_city,
+            mbti
+          })
+        });
+
         const data = await res.json();
 
-        if (data && data.redirect) {
-          window.location.href = data.redirect;
+        if (data && data.content) {
+          const encoded = encodeURIComponent(data.content);
+          window.location.href = `result.html?text=${encoded}`;
+        } else {
+          document.body.innerHTML = "<h2>出错：分析失败，请返回重试。</h2>";
         }
-      } catch (e) {
-        console.log("等待分析结果中...");
+      } catch (error) {
+        document.body.innerHTML = `<h2>网络错误：${error.message}</h2>`;
       }
-    };
+    }
 
-    setInterval(checkStatus, 2000); // 每2秒轮询一次
+    fetchResult();
   </script>
 </body>
 </html>
