--- a/result.html
+++ b/result.html
@@ -14,22 +14,39 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 50px 20px;
+      padding: 40px 20px;
+      min-height: 100vh;
     }
+
     h1 {
       color: #a78bfa;
       font-size: 32px;
       margin-bottom: 30px;
+      text-align: center;
     }
+
     .result-box {
       background-color: #2c2254;
       padding: 30px;
-      border-radius: 12px;
+      border-radius: 16px;
       box-shadow: 0 0 20px rgba(167, 139, 250, 0.3);
       max-width: 800px;
       width: 100%;
-      white-space: normal;
       line-height: 1.8;
+      white-space: pre-wrap;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-width: 600px) {
+      .result-box {
+        padding: 20px;
+        font-size: 15px;
+      }
     }
   </style>
 </head>
@@ -43,7 +60,12 @@
     const box = document.getElementById("result");
 
     if (result) {
-      box.innerHTML = decodeURIComponent(result).replace(/\n/g, "<br>");
+      const decoded = decodeURIComponent(result);
+      // 显示换行符，并防止 HTML 注入
+      box.innerHTML = decoded
+        .replace(/</g, "&lt;")
+        .replace(/>/g, "&gt;")
+        .replace(/\n/g, "<br>");
     } else {
       box.textContent = "未找到分析内容，请返回重新提交。";
     }
