--- a/index.html
+++ b/index.html
@@ -115,10 +115,7 @@
         mbti
       };
 
-      // 跳转 loading 页面
-      window.location.href = "loading.html";
-
-      // 后台提交到 Webhook（把这行换成你的真实地址）
+      // 先提交给 Webhook
       await fetch("https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8", {
         method: "POST",
         headers: {
@@ -126,6 +123,9 @@
         },
         body: JSON.stringify(data)
       });
+
+      // 然后跳转到 loading 页面
+      window.location.href = "loading.html";
     });
   </script>
 </body>
