--- a/loading.html
+++ b/loading.html
@@ -38,15 +38,15 @@
   <p>请耐心等待，约 5-10 秒后自动跳转</p>
 
   <script>
-    // 从本地存储中读取表单数据
+    // ✅ 用户输入数据（你可以改成从 URL 或表单获取）
     const inputData = {
-      birth_date: localStorage.getItem("birth_date"),
-      birth_time: localStorage.getItem("birth_time"),
-      birth_city: localStorage.getItem("birth_city"),
-      mbti: localStorage.getItem("mbti")
+      birthday: "1990-01-01",
+      mbti: "INFP",
+      location: "北京"
     };
 
-    const webhookURL = "https://hook.us1.make.com/xxx-your-webhook-url"; // ← 替换成你自己的 Webhook 链接
+    // ✅ Webhook 地址（请替换为你自己的）
+    const webhookURL = "https://hook.us1.make.com/xxx-your-webhook-url";
 
     fetch(webhookURL, {
       method: "POST",
@@ -54,15 +54,18 @@
         "Content-Type": "application/json"
       },
       body: JSON.stringify(inputData),
-      redirect: "follow"
+      redirect: "manual"  // ✅ 重要！防止浏览器自动跳转，保留 response.headers
     })
     .then(response => {
-      if (response.redirected) {
-        // 成功：跳转到 result.html
-        window.location.href = response.url;
+      if (response.status === 302) {
+        const redirectURL = response.headers.get("Location");
+        if (redirectURL) {
+          window.location.href = redirectURL;
+        } else {
+          throw new Error("没有找到跳转地址");
+        }
       } else {
-        // 没跳转：说明可能出错
-        document.body.innerHTML = "<h2 style='color: red;'>出错了，请刷新重试</h2>";
+        throw new Error("返回状态码不是 302");
       }
     })
     .catch(error => {
