--- a/loading.html
+++ b/loading.html
@@ -44,7 +44,7 @@
       location: "北京"
     };
 
-    const webhookURL = "https://hook.us1.make.com/https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8"; // ← 替换为你的真实地址
+    const webhookURL = "https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8"; // ← 替换为你的真实地址
 
     fetch(webhookURL, {
       method: "POST",
